prevent horizontal scrolling & footer padding on mobile
- prevent horizontal scrolling
added "maximum-scale=1, user-scalable=no" to meta viewport content
- rapiin margin dan paddings di device

--- a/style.css
+++ b/style.css
@@ -18,7 +18,7 @@ body{
     box-sizing: border-box;
 }
 
-@media (max-width: 375px){
+@media only screen and (max-width: 375px){
     h1 {
         font-size: 6vmin;
     }
@@ -101,8 +101,7 @@ navbar {
 }
 
 section {
-    margin: 20px 10px 10px 10px;
-    padding: 10px 10px 10px 10px;
+    width: 100vw;
 }
 
 /* welcome-section*/
@@ -256,13 +255,19 @@ section#projects h1 {
 
 /*footer*/
 footer {
+    display: flex;
+    justify-content: center;
+    width: 100vw;
     text-align: center;
+    align-items: flex-end;
+    align-content: center;
     color: gray;
     font-size: 10px;
 }
 
 @media only screen and (max-width: 875px){
     footer p {
-        font-size: 4vmin;
+        font-size: 3vmin;
+        padding: 1vmin 3vmin 1vmin 3vmin;
     }
 }
